--- a/index.html
+++ b/index.html
@@ -191,9 +191,7 @@
                 Sep 2023 - Present · 1 yr
               </p>
               <p class="s-description text-center">
-                Brief description of your roles and responsibilities. For example, "Led the development of web
-                applications, managed frontend and backend tasks, and collaborated with cross-functional teams to ensure
-                project success."
+                Led server-side automation in a VMware environment using Python, Grafana, and PowerShell, improving infrastructure efficiency and system monitoring
               </p>
             </div>
           </div>
@@ -213,9 +211,7 @@
                 Oct 2017 - Sep 2023 · 6 yrs
               </p>
               <p class="s-description text-center">
-                Brief description of your roles and responsibilities. For example, "Led the development of web
-                applications, managed frontend and backend tasks, and collaborated with cross-functional teams to ensure
-                project success."
+                Automated business processes, creating and deploying scripts to optimize workflows, reduce manual tasks, and enhance business productivity
               </p>
             </div>
           </div>
@@ -235,9 +231,7 @@
                 Dec 2016 - Aug 2017 · 9 mos
               </p>
               <p class="s-description text-center">
-                Brief description of your roles and responsibilities. For example, "Led the development of web
-                applications, managed frontend and backend tasks, and collaborated with cross-functional teams to ensure
-                project success."
+                Developed web applications using PHP, with a focus on UI/UX design, contributing to seamless user experiences and backend functionality.
               </p>
             </div>
           </div>
